--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "boomerang",
-  "version": "0.9.0",
+  "version": "0.9.0-pm",
   "description": "boomerang always comes back, except when it hits something",
   "main": "boomerang.js",
   "directories": {
@@ -15,7 +15,7 @@
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-uglify": "^0.6.0",
     "grunt-eslint": "^1.1.0",
-    "grunt-karma": "^0.9.0",
+    "grunt-karma": "^0.12.1",
     "grunt-string-replace": "^1.0.0",
     "karma-chrome-launcher": "^0.1.5",
     "karma-coverage": "^0.2.6",
